deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: app-name
spec:
 replicas: 2
 selector:
   matchLabels: 
    app: app-name
 template:
  metadata:
   labels:
    app: app-name
  spec:
     containers:
     - name: app-name
       image: lovelord88/webapp:latest
       ports:
       - containerPort: 3000
 




# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app-name
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: app-name
#   template:
#     metadata:
#       labels:
#         app: app-name
#     spec:
#       containers:
#         - name: app-name
#           image: lovelord88/webapp:latest
#           ports:
#             - containerPort: 3000
