service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: app-name
  ports:
   - port: 80
     targetPort: 3000
